--- a/index.html
+++ b/index.html
@@ -3,12 +3,4 @@
 This is HTML File
 This is paragraph
 <u>heading</u>
-main branch
-
-</H1>
-=======
-<H1>
-This is HTML File
-This is paragraph
-</H1>
->>>>>>> HTML file added
+main brach
